[project]
name = "safespace-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "langchain>=1.3.7",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
]
